remove: 不要なAPIを一旦削除
